--- a/readme.adoc
+++ b/readme.adoc
@@ -1,31 +1,81 @@
 = Population Health Management
 
-Read this blog for more information:
+Read this series of articles for more information:
 
 https://developers.redhat.com/blog/2020/02/19/designing-an-event-driven-business-process-at-scale-a-health-management-example-part-1/[Blog]
 
+This is a new version. The old version, which is the one used in the articles, has been released at https://github.com/mauriziocarioli/PHM-Processes/releases/tag/v1.0.0[v1.0.0]
+
 === Requirements
-* Install event listeners: https://github.com/mauriziocarioli/PHM-Tracing/releases/tag/v1.0.0[PHM-Tracing] and https://github.com/mauriziocarioli/Tracing/releases/tag/v1.0.0[Tracing]
-* Import and deploy the model https://github.com/mauriziocarioli/PHM-Model/releases/tag/v1.0.0[PHM-Model]
+* Install https://zookeeper.apache.org/doc/r3.1.2/zookeeperStarted.html[Zookeeper]
+* Install https://kafka.apache.org/quickstart[Kafka]
+* Install event listeners: https://github.com/mauriziocarioli/PHM-Tracing/releases/tag/v2.1.0[PHM-Tracing]
+* Import and deploy the model https://github.com/mauriziocarioli/PHM-Model/releases/tag/v2.1.0[PHM-Model]
+* Import and deploy the rules https://github.com/mauriziocarioli/PHM-Rules/releases/tag/v2.1.0[PHM-Rules]
 * Create users and groups (see Wildfly script in src/main/sh)
-* Install and start service https://github.com/mauriziocarioli/PHM-API/releases/tag/v1.0.0[PHM-API] on Node.js
-* Configure a mock SMTP server such as https://mailtrap.io[mailtrap.io]
+* Configure a mock SMTP server such as https://mailtrap.io and set the following environment variables:
+DEMO_SMTP_SERVER, DEMO_SMTP_PORT, DEMO_SMTP_USER, DEMO_SMTP_PWD
+* Set EAP system property org.jbpm.var.log.length to 65536
+* Set variable length in the database accordingly:
+
+If the database is either H2 or MySql
+[source,SQL]
+----
+ALTER TABLE VARIABLEINSTANCELOG MODIFY VALUE VARCHAR(65536);
+ALTER TABLE VARIABLEINSTANCELOG MODIFY OLDVALUE VARCHAR(65536);
+----
+If the database is PostgreSQL
+[source,SQL]
+----
+ALTER TABLE VARIABLEINSTANCELOG ALTER COLUMN VALUE TYPE CHARACTER VARYING(65536);
+ALTER TABLE VARIABLEINSTANCELOG ALTER COLUMN OLDVALUE TYPE CHARACTER VARYING(65536);
+----
+
+* Get the Camel integration Spring Boot app project: https://github.com/mauriziocarioli/PHM-integration-service/releases/tag/v2.1.0[PHM-integration-service]
+* Get the end-user UI project: https://github.com/mauriziocarioli/phm-management-ui/releases/tag/v2.1.0[phm-management-ui]
+
+== Run On Your Computer
+
+* Start zookeeper and Kafka
+* Start the PHM Integration Service by running
+[source,bash]
+---- 
+mvn spring-boot:run
+---- 
+in the integration service project directory
+
+* Start the end-user UI by running
+[source,bash]
+----
+mvn clean install
+java -jar target/phm-process-ui-1.0.0-fat.jar
+----
+in the end-user UI project directory
 
 == Scenarios
-Start the process with a POST at the end point:
 
+These scenarios demonstrate
+
+* a workflow where tasks are created only after another task is closed,
+* the implementation of both soft close of a task (determined by task completion) and hard close of a task
+(determined by an external system),
+* reminders and escalations.
+
+Start the process with a POST at the end point:
 [source,URL]
 ----
-http://localhost:8080/kie-server/services/rest/server/containers/PHM-Processes/processes/PHM-Processes.R838/instances
+http://localhost:8181/camel/trigger
 ----
+
+by posting:
+
 [source,JSON]
 ----
 {
-     "pMemberId": "123",
-     "pTriggerId": "R383"
+     "memberId": "xyz",
+     "triggerId": 74
 }
 ----
-The values of pMemberId and pTriggerId are unimportant.
 
 If a task requires to be hard closed just send a signal with this POST end point:
 
@@ -37,25 +87,58 @@ http://localhost:8080/kie-server/services/rest/server/containers/PHM-Processes/p
 where {{processInstanceId}} is the specific task process instance id and the POST body is empty.
 
 === Baseline Scenario (Happy Path)
-Login as the jBPM administrator and follow the execution of the process and subprocesses
-in the Manage section of Business Central.
-Start the process and use a browser incognito window to login as the actors listed below:
 
-* Actor: Peter (pro)
-* Actor: Mary (mem)
-* Actor: Robert (rxs)
-* Actor: Charlie (chw)
+https://www.arthritis.org/drug-guide/dmards/dmards[DMARD drugs reference]
+
+Mary has an insurance program with Health-Insurance.com and has reumathoid arthritis. Her DMARD prescription has run out of refills. This is the trigger for several actions to be taken.
+
+* Peter, Mary's doctor, must be notified and write a new prescription. This action is considered complete only after the claim for the new prescription has been approved (hard close)
+* Charlie, Mary's case manager, must be notified and do back office work. This action is considered complete only after the new prescription has been approved (hard close)
+* Mary must be notified after Peter's action has hard closed that is after her new prescription has been written. This action is completed after the notification is acknowledged (soft close)
+* Robert, Mary's pharmacist must be notified after Peter's action has hard closed. This action is completed after the notification is acknowleged (soft close)
+
+Each task failure to soft close in a timely manner will cause an email reminder to be sent.
+
+Each task failure to hard close in a timely manner will cause an escalation.
+
+Login as the jBPM administrator and follow the execution of the process and subprocesses
+in the Manage section of Business Central. See that by submitting the data above three processes are started: the Trigger process and two Action processes, the one for Peter and the one for Charlie.
+
+Use end-user UI to login as the actors listed below:
+
+* Actor: Peter (pro) is the provider. Complete the task and hard close it. See how two more processes are started: the Action processes for Mary and Robert.
+* Actor: Mary (mem) is the Insurance member. Complete the task.
+* Actor: Robert (rxs) is the pharmacist. Complete the task.
+* Actor: Charlie (chw) is the Insurance case nurse. Complete the task and then hard close it.
 
 === Reminder Scenario
-* Change reminder timer in B143 subprocess to 30s, deploy and start the process.
-* Let 30s timer expires.
-* See that reminder service has executed.
-Login in the incognito window as the actor below and complete the task.
-* Actor: Charlie (chw)
+
+* Change reminder timer in Charlie's subprocess to 15s (R/PT15S), deploy and start the process.
+* Let the 15s timer expires.
+* See that reminder service has executed. Check the mailbox for the reminder email.
+Login in the end-user UI as the actor below:
+* Actor: Charlie (chw). Complete the task.
+* See that the reminder has stopped.
+* Hard close the task.
 
 === Escalation Scenario
-* Change escalation timer in B143 subprocess to 30s
-* Let 30s timer expires. Login in the incognito window
-as the actor below and complete the escalation task:
-* Actor: Marc (mch)
-* Actor: Charlie (chw)
+
+* Change escalation timer in Charlie's subprocess to 30s
+* Charlie completes the task but the hard code signal is not thrown
+* Let 30s timer expires. Login in the end-user UI
+as the actor below:
+* Actor: Marc (mch) is the Insurance case manager. Complete the task.
+
+=== A Different Trigger Scenario
+
+This scenario demonstrates that a change in the input data produces a different workflow with no need to manually define one.
+
+Start the process with this payload:
+[source,JSON]
+----
+{
+     "memberId": "xyz",
+     "triggerId": 184
+}
+----
+The actors are now only Peter (the doctor) and Robert (the pharmacist).
